--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/infoetu/vanderar/workspace/Superplateau/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="/home/infoetu/vanderar/workspace/Superplateau/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Spectus/workspace/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Spectus/workspace/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
