--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Spectus/workspace/lib/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Spectus/workspace/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="lib"/>
+	<classpathentry kind="lib" path="lib/tps.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
